src/objects/QuoteLine__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsAdditional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Additional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>QuoteLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Hours</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Quote Line</label>
    <nameField>
        <displayFormat>QL{0000000}</displayFormat>
        <label>Quote Line #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>